[project]
name = "hik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "apscheduler==3.11.2",
    "auth==1.3.0",
    "blinker==1.9.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "click==8.3.2",
    "colorama==0.4.6",
    "cryptography==46.0.7",
    "flask==3.1.3",
    "flask-cors==6.0.2",
    "greenlet==3.3.2",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pyjwt==2.12.1",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "sqlalchemy==2.0.49",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.1",
    "tzlocal==5.3.1",
    "urllib3==2.6.3",
    "waitress==3.0.2",
    "werkzeug==3.1.8",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
